Fix some scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -39,11 +39,11 @@ body {
 }
 
 .c-scrollbar::-webkit-scrollbar {
-  @apply w-2 h-2;
+  @apply w-1.5 h-1.5;
 }
 .c-scrollbar::-webkit-scrollbar-thumb {
   @apply bg-gray-600/10 rounded-full;
 }
 .c-scrollbar::-webkit-scrollbar-track {
-  @apply opacity-0 rounded-full p-2 h-[90%];
+  @apply opacity-0 rounded-full h-[90%];
 }
